small wrapper overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ span.value {
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	display: -webkit-flex;
 	display: flex;
+	overflow: hidden;
 }
 
 /*** left-wrapper ***/
